:art: Fix vertical align on Breadcrumb

--- a/src/styles/items/_breadcrumb.scss
+++ b/src/styles/items/_breadcrumb.scss
@@ -4,7 +4,7 @@
   .ariane-list-item {
     color: white;
     font-size: 16px;
-    margin-right: 20px;
+    margin: auto 20px auto auto;
     font-weight: bold;
     
     .ariane-link {
